--- a/index.html
+++ b/index.html
@@ -20,177 +20,17 @@
     Moralis.initialize("vxU1uKdAyCvntgW90Z4nwT9wc3PNvKIlROuY3tr9");
     Moralis.serverURL = "https://9gpkdfpybsmu.moralis.io:2053/server";
 
-    function handleMoralisError(err) {
-      switch (err.code) {
-        case Moralis.Error.INVALID_SESSION_TOKEN:
-          Moralis.User.logOut();
-          console.log("logout");
-          // If web browser, render a log in screen
-          // If Express.js, redirect the user to the log in route
-          break;
-
-          // Other Moralis API errors that you want to explicitly handle
-      }
-    }
-
-    async function task() {
-      let query = new Moralis.Query("User");
-      let subscription = await query.subscribe();
-
-      subscription.on("open", () => {
-        console.log("subscription opened");
-      });
-
-      subscription.on("update", (object) => {
-        console.log(object);
-      });
-      // const web3 = await Moralis.enable();
-      // console.log(web3);
-      // let query = new Moralis.Query("Deposit");
-      // let subscription = await query.subscribe();
-
-      // subscription.on("open", () => {
-      //   console.log("subscription opened");
-      // });
-
-      // subscription.on("create", (object) => {
-      //   console.log("object created");
-      //   console.log(object.attributes);
-      // });
-
-      // const tokenValue = (value, decimals) =>
-      //   value / Math.pow("10", decimals ?? "18");
-      // console.log(tokenValue("11111111111111", 21));
-      // let user = await Moralis.User.current().fetch();
-      // console.log(user);
-      // Moralis.User.currentAsync().then(function (user) {
-      //   // do stuff with your user
-      //   console.log(user.attributes);
-      // console.log(Moralis.Web3API);
-      // // const options = {
-      // //   chain: "bsc",
-      // //   address: "0x58F876857a02D6762E0101bb5C46A8c1ED44Dc16",
-      // //   topic:
-      // //     "0x1c411e9a96e071241c2f21f7726b17ae89e3cab4c78be50e062b03a9fffbbad1",
-      // //   abi: {
-      // //     anonymous: false,
-      // //     inputs: [
-      // //       {
-      // //         indexed: false,
-      // //         internalType: "uint112",
-      // //         name: "reserve0",
-      // //         type: "uint112"
-      // //       },
-      // //       {
-      // //         indexed: false,
-      // //         internalType: "uint112",
-      // //         name: "reserve1",
-      // //         type: "uint112"
-      // //       }
-      // //     ],
-      // //     name: "Sync",
-      // //     type: "event"
-      // //   }
-      // // };
-      // // const task = await Moralis.Web3API.native.getContractEvents(options);
-      console.log(Moralis.Web3API);
-      const task = await Moralis.Web3API.account.getNFTs({
-        address: "0x2C0b0a4D8300AF35e2FDFE93D966B893BdB8005B",
-        chain: "mumbai"
-      });
-
-      console.log(task);
-      // const price = await Moralis.Web3API.token.getTokenPrice({
-      //   address: "0x1614f18fc94f47967a3fbe5ffcd46d4e7da3d787"
-      //   // exchange_name: "Uniswapv2",
-      //   chain: "eth"
-      // });
-      // console.log(price);
-      // try {
-      // const res = await Moralis.Web3API.account.getNFTs({
-      //   chain: "bsc",
-      //   address: "0x259DB2fD041d370e803f4D44951bE0E4722b7a45"
-      // });
-      // console.log(res);
-      // } catch (e) {
-      //   console.log(e);
-      // }
-      // try {
-      //   const balances = await Moralis.Web3API.account.getTokenBalances(
-      //     options
-      //   );
-      //   console.log(balances);
-      // } catch (e) {
-      //   console.log(e);
-      // }
-      // try {
-      //   const transfers = await Moralis.Web3API.account.getTokenTransfers(
-      //     options
-      //   );
-      //   console.log(transfers);
-      // } catch (e) {
-      //   console.log(e);
-      // }
-      // try {
-      //   const polygonNFTs = await Moralis.Web3API.account.getNFTs(options);
-      //   console.log(polygonNFTs);
-      // } catch (e) {
-      //   console.log(e);
-      // }
-
-      // try {
-      //   const transfersNFT = await Moralis.Web3API.account.getHistoricalNFTTransfers(
-      //     options
-      //   );
-      //   console.log(transfersNFT);
-      // } catch (e) {
-      //   console.log(e);
-      // }
-      // try {
-      //   const polygonNFTs = await Moralis.Web3API.account.getNFTsForContract(
-      //     options
-      //   );
-      //   console.log(polygonNFTs);
-      // } catch (e) {
-      //   console.log(e);
-      // }
-    }
-
-    async function inch2() {
-      const web3 = await Moralis.Web3.enable();
-      console.log(web3);
-      const transaction = web3.eth
-        .sign({
-          data: "0x095ea7b300000000000000000000000011111112542d85b3ef69ae05771c2dccff4faa26ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-          gasPrice: "1000000000",
-          to: "0x8cef274596d334ffa10f8976a920ddc81ba6e29b",
-          value: "0"
-        })
-        .then((result, error) => {
-          console.log(result);
-        });
-      console.log(transaction);
-    }
-    //ync function login() {
-    //// console.log("login clicked");
-    //// await Moralis.Web3.enable();
-    //// var user = await Moralis.Web3.authenticate();
-    //// if (user) {
-    ////   console.log(user.attributes.theme);
-    //   // }
-    // }
     async function login() {
-      let message = 'Hello, You are logging in : ' + (Math.random() + 1).toString(36).substring(2);
-      Moralis.getSigningData = () => message;
       var walletProvider = "walletconnect";
       if (typeof web3 !== 'undefined') {
         walletProvider = "metamask";
       }
       Moralis.authenticate({
         provider: walletProvider,
-        chainId: 56
+        chainId: 56,
+        signingMessage:"hello"
       }).then(function (user) {
-        authenticate(user.id, user.get('ethAddress'))
+        alert(user.id)
       });
     }
 
