--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <p id ="wallet"></p>
 
   <script>
-    Moralis.initialize("vxU1uKdAyCvntgW90Z4nwT9wc3PNvKIlROuY3tr9");
-    Moralis.serverURL = "https://9gpkdfpybsmu.moralis.io:2053/server";
+    Moralis.initialize("iXfQJrKLSzRtPBKETfyia7akkCopGhCLxddmyxLw");
+    Moralis.serverURL = "https://m3oiviwg53p6.bigmoralis.com:2053/server";
 
     async function login() {
       var walletProvider = "walletconnect";
